[project]
name = "usepyx"
version = "0.1.1"
description = "Pure Python Full-Stack Framework: No JavaScript, no HTML mess, just Zen Mode."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "PyX Team", email = "dev@pyx.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["web", "framework", "python", "frontend", "fullstack", "pyx"]
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "granian",
    "sqlmodel",
    "typer",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "jinja2",
    "openai",
    "anthropic",
    "google-generativeai",
    "boto3"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/sukirman1901/usePyX"
Documentation = "https://github.com/sukirman1901/usePyX/blob/main/README.md"
Repository = "https://github.com/sukirman1901/usePyX.git"
Issues = "https://github.com/sukirman1901/usePyX/issues"

[project.scripts]
pyx = "pyx.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyx*"]
exclude = ["pyxdev*", "road_test_app*", "uploads*", "tests*", "examples*", "impulseai*"]
